# chips

./: .travis.yml  CHANGELOG.md  README.md  chips.cabal  circle.yml  fplug.cabal  integration.sh  package.yaml  stack.yaml
LICENSE/: spawn
app/: Main.hs
integration/: Dockerfile  build.fish  chips_initial_run.txt  chips_second_run_tail.txt  config.fish  default.plugin.yaml  install.txt  plugin.yaml  removed.build.fish  removed.yaml  test.sh
src/: Args.hs  ByteString.hs  Chips.hs  Config.hs  File.hs  Git.hs  Lib.hs  RawFilePath.hs  SelfUpdate.hs  Spawn.hs  Utility.hs
src/Lib/: Directory.hs
src/gnulinux/: Platform.hs
src/osx/: Platform.hs
test/: Spec.hs
