name:               chips
version:            1.0.0
synopsis:           A plugin manager for the fish shell
description:        Please see README.md
homepage:           http://github.com/kinoru/chips#readme
license:            GPL-3
license-file:       LICENSE/chips
author:             Kinoru
maintainer:         xkinoru@gmail.com
copyright:          2015 Kinoru et al.
category:           Shell
build-type:         Simple
-- extra-source-files:
cabal-version:      >=1.10

library
  hs-source-dirs:   src
  exposed-modules:
    Git
    Spawn
    Lib
  other-modules:
    Utility
    Config
    Lib.Directory
    Paths_chips
  build-depends:
    aeson >= 0.11.1.4 && < 0.12,
    base64-bytestring >= 1.0.0.1 && < 2,
    bytestring >= 0.10.6 && < 0.11,
    cmdargs >= 0.10.13 && < 0.11,
    directory >= 1.2.2 && < 2,
    filepath >= 1.4 && < 2,
    process >= 1.2.3 && < 2,
    text >= 1.2.2 && < 2,
    yaml >= 0.8.15.2 && < 0.9,
    base >= 4.7 && < 5
  default-language: Haskell2010
  default-extensions:
    LambdaCase,
    MultiWayIf,
    RecordWildCards,
    TemplateHaskell,
    OverloadedStrings

executable chips
  hs-source-dirs:   app
  main-is:          Main.hs
  ghc-options:      -Wall -static -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    chips,
    base
  default-language: Haskell2010
  default-extensions:
    TemplateHaskell,
    OverloadedStrings

test-suite chips-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:
    hspec >= 2.2.2 && < 3,
    text >= 1.2.2 && < 2,
    chips,
    base
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  default-extensions:
    LambdaCase,
    MultiWayIf,
    RecordWildCards,
    TemplateHaskell,
    OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/kinoru/chips
