name:               chips
version:            1.1.2
synopsis:           A plugin manager for the fish shell
description:        Please see README.md
homepage:           https://github.com/xtendo-org/chips#readme
license:            GPL-3
license-file:       LICENSE/chips
author:             XT
maintainer:         e@xtendo.org
copyright:          2015 XT et al.
category:           Shell
build-type:         Simple
extra-source-files:
  README.md
  src/gnulinux/Platform.hs
  src/osx/Platform.hs
cabal-version:      >=1.10

library
  hs-source-dirs:   src
  if os(linux)
    hs-source-dirs: src/gnulinux
  if os(darwin)
    hs-source-dirs: src/osx
  exposed-modules:
    Lib
    ByteString
    RawFilePath
    Utility
    Platform
    SelfUpdate
    Config
    Git
    Spawn
    Chips
  other-modules:
    Paths_chips
  build-depends:
    aeson >= 1.0.1.0 && < 2,
    base64-bytestring >= 1.0.0.1 && < 2,
    bytestring >= 0.10.6 && < 0.11,
    cmdargs >= 0.10.13 && < 0.11,
    directory >= 1.2.2 && < 2,
    filepath >= 1.4 && < 2,
    process >= 1.2.3 && < 2,
    semver >= 0.3.3.1 && < 0.4,
    template-haskell >= 2.10.0.0 && < 3,
    text >= 1.2.2 && < 2,
    unix >= 2.7.1.0 && < 3,
    yaml >= 0.8.15.2 && < 0.9,
    base >= 4.7 && < 5
  default-language: Haskell2010
  default-extensions:
    LambdaCase,
    MultiWayIf,
    RecordWildCards,
    TemplateHaskell,
    OverloadedStrings

executable chips
  hs-source-dirs:   app
  main-is:          Main.hs
  if os(linux)
    ghc-options:      -Wall -static -threaded -rtsopts -optc-static -optl-pthread -optl-static
  if os(darwin)
    ghc-options:      -Wall -static -threaded -rtsopts
  build-depends:
    chips,
    base
  default-language: Haskell2010
  default-extensions:
    TemplateHaskell,
    OverloadedStrings

test-suite chips-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:
    hspec >= 2.2.2 && < 3,
    text >= 1.2.2 && < 2,
    chips,
    base
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  default-extensions:
    LambdaCase,
    MultiWayIf,
    RecordWildCards,
    TemplateHaskell,
    OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/xtendo-org/chips
