name:               fplug
version:            0.1.0.0
synopsis:           A plugin manager for the fish shell
description:        Please see README.md
homepage:           http://github.com/kinoru/fplug#readme
license:            GPL-3
license-file:       LICENSE
author:             Kinoru
maintainer:         xkinoru@gmail.com
copyright:          2015 Kinoru et al.
category:           Shell
build-type:         Simple
-- extra-source-files:
cabal-version:      >=1.10

library
  hs-source-dirs:   src
  exposed-modules:  Lib
  other-modules:
    Args,
    Config
  build-depends:
    aeson >= 0.9 && < 0.10,
    cmdargs >= 0.10.13 && < 0.11,
    text >= 1.2.2 && < 2,
    yaml >= 0.8.15.2 && < 0.9,
    base >= 4.7 && < 5
  default-language: Haskell2010
  default-extensions:
    LambdaCase,
    MultiWayIf,
    TemplateHaskell,
    OverloadedStrings

executable fplug
  hs-source-dirs:   app
  main-is:          Main.hs
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    fplug,
    base
  default-language: Haskell2010
  default-extensions:
    TemplateHaskell,
    OverloadedStrings

test-suite fplug-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:
    fplug,
    base
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/kinoru/fplug
